--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -19,6 +19,8 @@
 
     <!-- Custom CSS -->
     <link rel="stylesheet" href="{% static 'css/styles.css' %}">
+    {% block additional_include %}
+    {% endblock %}
 
   </head>
   <body>
