Issue submitter app

--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -42,6 +42,7 @@
               <li><a href="{% url 'mccalendar:index' %}">Calendar</a></li>
               <li><a href="{% url 'documents:index' %}">Documents</a></li>
               <li><a href="{% url 'scholars' %}">Directory</a></li>
+              <li><a href="{% url 'issues:index' %}">Issues</a></li>
 
               <!-- Begin Dropdown account button -->
               <li class="dropdown">
