add ability to edit applicant info, display feedback to staff

--- a/core/templates/core/edit_edu.html
+++ b/core/templates/core/edit_edu.html
@@ -50,7 +50,7 @@ Edit Education
       <div class="col-md-12 {% if not forloop.first %}margin-top-lg{% endif %}">
         <div class="form-group margin-sm">
           <label for="id_school" class="form-label">
-            School
+            University
           </label>
           {% if not forloop.last %}
           <span class="text-right pull-right">Delete: {{ degree_form.DELETE }}</span>
