--- a/core/static/css/styles.css
+++ b/core/static/css/styles.css
@@ -369,3 +369,10 @@ a.day-link:active {
     text-decoration: none;
 }
 
+/* Feedback */
+a p.card-extra-info {
+  color: #777;
+}
+a p.card-extra-info:hover {
+  color: #777;
+}
