--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -44,13 +44,13 @@
               <li><a href="{% url 'mccalendar:index' %}">Calendar</a></li>
               {# <li><a href="{% url 'documents:index' %}">Documents</a></li> #}
               <li><a href="{% url 'scholars' %}">Directory</a></li>
-              <li><a href="{% url 'issues:index' %}">Issues</a></li>
 
               <!-- Begin Dropdown account button -->
               <li class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Account <span class="caret"></span></a>
                 <ul class="dropdown-menu">
                   <li><a href="{% url 'own_profile' %}">My Profile</a></li>
+                  <li><a href="{% url 'issues:index' %}">Report Issue</a></li>
                   <li role="separator" class="divider"></li>
                   <li><a href="{% url 'password_change' %}">Change Password</a></li>
                   <li><a href="{% url 'edit_account' %}">Change Account</a></li>
