add export data to excel for staff

--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -8,6 +8,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>{% block title %}{% endblock %}{% block titleend %} - McDermott Network{% endblock %}</title>
 
+    {% block include_prefix %}
+    {% endblock %}
     <!-- jQuery - must come before Bootstrap JS file -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
     <script src="https://code.jquery.com/ui/1.11.4/jquery-ui.min.js"></script>
