--- a/feedback/templates/feedback/applicant_table.html
+++ b/feedback/templates/feedback/applicant_table.html
@@ -8,8 +8,10 @@
 Feedback - Applicant Table
 {% endblock %}
 
-{% block additional_include %}
+{% block include_prefix %}
 <link rel="stylesheet" href="//cdn.datatables.net/1.10.10/css/jquery.dataTables.min.css">
+{% endblock %}
+{% block additional_include %}
 <script src="//cdn.datatables.net/1.10.10/js/jquery.dataTables.min.js"></script>
 {% endblock %}
 
@@ -21,30 +23,62 @@ Feedback - Applicant Table
   </div>
 {% endif %}
 <div class="col-md-10 col-md-offset-1 well">
-  <table class="table table-striped table-hover margin-top-lg" id="applicantTable">
-    <thead>
-      <tr>
-        <th>Applicant</th>
-        <th>Average Rating</th>
-        <th>Average Interest</th>
-        <th># of Feedback</th>
-      </tr>
-    </thead>
-    <tbody>
-      {% for applicant in applicants %}
+  <div class="table-responsive">
+    <table class="table table-striped table-hover margin-top-lg" id="applicantTable">
+      <thead>
         <tr>
-          <td><a href="{% url 'feedback:applicant_profile' applicant.norm_name %}">{{ applicant.get_full_name }}</a></td>
-          <td>{{ applicant|all_feedback|rating_average }}</td>
-          <td>{{ applicant|all_feedback|interest_average }}</td>
-          <td>{{ applicant|all_feedback|feedback_count }}</td>
+          <th>Title</th>
+          <th>First</th>
+          <th>Last</th>
+          <th>High School</th>
+          <th>City</th>
+          <th>State</th>
+          {% if user|has_role:'staff' %}
+            <th>Rating</th>
+            <th>Interest</th>
+            <th>#</th>
+          {% endif %}
         </tr>
-      {% endfor %}
-    </tbody>
-  </table>
+      </thead>
+      <tbody>
+        {% for applicant in applicants %}
+          <tr>
+            <td>
+              {% if applicant.gender == 'Male' %}
+                Mr.
+              {% elif applicant.gender == 'Female' %}
+                Ms.
+              {% endif %}
+            </td>
+            <td><a href="{% url 'feedback:applicant_profile' applicant.norm_name %}">{{ applicant.first_name }}</a></td>
+            <td><a href="{% url 'feedback:applicant_profile' applicant.norm_name %}">{{ applicant.last_name }}</a></td>
+            <td>{{ applicant.high_school }}</td>
+            <td>{{ applicant.hometown }}</td>
+            <td>{{ applicant.hometown_state }}</td>
+            {% if user|has_role:'staff' %}
+              <td>{{ applicant|all_feedback|rating_average }}</td>
+              <td>{{ applicant|all_feedback|interest_average }}</td>
+              <td>{{ applicant|all_feedback|feedback_count }}</td>
+            {% endif %}
+          </tr>
+        {% endfor %}
+      </tbody>
+    </table>
+  </div>
 </div>
 <script>
 $(document).ready(function(){
-    $('#applicantTable').DataTable();
+    $('#applicantTable').DataTable({
+      "order": [[ 1, "asc" ]],
+      "scrollY": "500px",
+      "scrollCollapse": true,
+      "paging": false,
+      {% if user|has_role:'staff' %}
+      "columnDefs": [
+        { "type": "num", targets: [6, 7, 8]  }
+      ]
+      {% endif %}
+    });
 });
 </script>
 {% endblock %}
