--- a/feedback/templates/feedback/applicant.html
+++ b/feedback/templates/feedback/applicant.html
@@ -9,6 +9,14 @@
 Feedback - {{ applicant.get_full_name }}
 {% endblock %}
 
+{% if user|has_role:'staff' %}
+  {% block additional_include %}
+  <link rel="stylesheet" href="https://cdn.datatables.net/1.10.10/css/dataTables.bootstrap.min.css">
+  <script src="https://cdn.datatables.net/1.10.10/js/jquery.dataTables.min.js"></script>
+  <script src="https://cdn.datatables.net/1.10.10/js/dataTables.bootstrap.min.js"></script>
+  {% endblock %}
+{% endif %}
+
 {% block inner_content %}
 <div class="row">
   <div class="col-md-12 text-center">
@@ -110,30 +118,50 @@ Feedback - {{ applicant.get_full_name }}
   {% if user|has_role:'staff' %}
     <div class="col-md-12">
       <h4>Feedback</h4>
-        <table class="table table-striped table-hover margin-top-lg">
-          <thead>
-            <tr>
-              <th>Scholar</th>
-              <th>Rating</th>
-              <th>Interest</th>
-              <th>Comments</th>
-            </tr>
-          </thead>
-          <tbody>
-            {% for f in feedback %}
-              {% if f.rating or f.interest or f.comments %}
-                  <tr>
-                    <td><a href="{% url 'profile' f.scholar.norm_name %}">{{ f.scholar.get_full_name }}</a></td>
-                    <td>{% if f.rating %}{{ f.rating }}{% endif %}</td>
-                    <td>{% if f.interest %}{{ f.interest }}{% endif %}</td>
-                    <td>{{ f.comments }}</td>
-                  </tr>
-              {% endif %}
-            {% endfor %}
-          </tbody>
-        </table>
+        <div class="table-responsive">
+          <table class="table table-striped table-hover margin-top-lg dt-responsive" width="100%" id="feedbackTable">
+            <thead>
+              <tr>
+                <th>First</th>
+                <th>Last</th>
+                <th>Rating</th>
+                <th>Interest</th>
+                <th>Comments</th>
+              </tr>
+            </thead>
+            <tbody>
+              {% for f in feedback %}
+                {% if f.rating or f.interest or f.comments %}
+                    <tr>
+                      <td><a href="{% url 'profile' f.scholar.norm_name %}">{{ f.scholar.first_name }}</a></td>
+                      <td><a href="{% url 'profile' f.scholar.norm_name %}">{{ f.scholar.last_name }}</a></td>
+                      <td>{% if f.rating %}{{ f.rating }}{% endif %}</td>
+                      <td>{% if f.interest %}{{ f.interest }}{% endif %}</td>
+                      <td>{{ f.comments }}</td>
+                    </tr>
+                {% endif %}
+              {% endfor %}
+            </tbody>
+          </table>
+        </div>
     </div>
   {% endif %}
 </div>
-
+{% if user|has_role:'staff' %}
+  <script>
+  $(document).ready(function(){
+      $('#feedbackTable').DataTable({
+        "order": [[ 2, "desc" ]],
+        "scrollY": "400px",
+        "scrollCollapse": true,
+        "paging": false,
+        "scrollX": true,
+        "columnDefs": [
+          { "type": "num", "targets": [2, 3]  },
+          { "orderable": false, "targets": 4 }
+        ]
+      });
+  });
+  </script>
+{% endif %}
 {% endblock %}
