--- a/feedback/templates/feedback/applicant.html
+++ b/feedback/templates/feedback/applicant.html
@@ -21,11 +21,7 @@ Feedback - {{ applicant.get_full_name }}
 <div class="row">
   <div class="col-md-12 text-center">
     <h4 class="margin-bot-md">
-      {% if applicant.gender == 'Male' %}
-      Mr.
-      {% elif applicant.gender == 'Female' %}
-      Ms.
-      {% endif %}
+      {{ applicant.gender }}
       {{ applicant.get_full_name }}
       {% if user|has_role:'staff' %}
         <a href="{% url 'feedback:edit_applicant' applicant.norm_name %}" class="btn btn-default btn-sm profile-show-btn"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>&nbsp;&nbsp;Edit</a>
