--- a/feedback/templates/macro/feedback_header.html
+++ b/feedback/templates/macro/feedback_header.html
@@ -14,5 +14,8 @@
     <li role="presentation">
       <a href="{% url 'feedback:export' %}" >Export to Excel</a>
     </li>
+    <li role="presentation">
+      <a href="{% url 'feedback:app_state' %}" >App State</a>
+    </li>
   {% endif %}
 </ul>
