--- a/feedback/templates/feedback/applicant.html
+++ b/feedback/templates/feedback/applicant.html
@@ -23,7 +23,7 @@ Feedback - {{ applicant.get_full_name }}
     <h4 class="margin-bot-md">
       {{ applicant.gender }}
       {{ applicant.get_full_name }}
-      {% if user|has_role:'staff' %}
+      {% if user|has_role:'staff' or user|can:'edit_applicants' %}
         <a href="{% url 'feedback:edit_applicant' applicant.norm_name %}" class="btn btn-default btn-sm profile-show-btn"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>&nbsp;&nbsp;Edit</a>
       {% endif %}
     </h4>
@@ -92,7 +92,7 @@ Feedback - {{ applicant.get_full_name }}
             <label for="id_interest" class="form-label">
               Does this person want to be a Scholar?
             </label>
-            {{ form.interest|add_class:"form-control" }}
+            {{ form.interest|add_class:"form-control disabled" }}
             <span class="error">{{ form.interest.errors }}</span>
           </div>
         </div>
@@ -108,8 +108,10 @@ Feedback - {{ applicant.get_full_name }}
         <br>
         <div class="col-md-12 text-center">
           <a href="{% url 'feedback:index' %}" class="btn btn-default">BACK</a>
-          &nbsp;&nbsp;
-          <input class="btn btn-default" type="submit" value="SAVE" />
+          {% if state.current != 3 %}
+            &nbsp;&nbsp;
+            <input class="btn btn-default" type="submit" value="SAVE" />
+          {% endif %}
         </div>
         <br>
       </form>
