--- a/feedback/templates/feedback/applicant.html
+++ b/feedback/templates/feedback/applicant.html
@@ -30,8 +30,11 @@ Feedback - {{ applicant.get_full_name }}
   </div>
   <div class="col-md-6">
     <div class="text-center">
+      {% thumbnail applicant.actual_pic "200x250" crop="center" as im %}
+        <img class="margin-bot-sm" src="{{ im.url }}" width="{{ im.width }}" height="{{ im.height }}">
+      {% endthumbnail %}
       {% thumbnail applicant.pic "200x250" crop="center" as im %}
-        <img src="{{ im.url }}" width="{{ im.width }}" height="{{ im.height }}">
+        <img class="margin-bot-sm" src="{{ im.url }}" width="{{ im.width }}" height="{{ im.height }}">
       {% endthumbnail %}
       <br>
       <br>
