--- a/feedback/templates/feedback/edit_applicant.html
+++ b/feedback/templates/feedback/edit_applicant.html
@@ -74,8 +74,14 @@ Feedback - Edit {{ applicant.get_full_name }}
     </div>
     <!--TODO: Replace this with something else later -->
     <div class="col-md-4 col-md-offset-4 col-sm-12 text-center margin-height-md">
+      <label>Registration Pic</label>
       {{ form.pic }}
       <span class="error">{{ form.pic.errors }}</span>
+    </div>
+    <div class="col-md-4 col-md-offset-4 col-sm-12 text-center margin-height-md">
+      <label>Sneak Peek Pic</label>
+      {{ form.actual_pic }}
+      <span class="error">{{ form.actual_pic.errors }}</span>
     </div>
     <div class="col-md-12 col-sm-12 text-center">
       <br>
