--- a/feedback/templates/feedback/applicant.html
+++ b/feedback/templates/feedback/applicant.html
@@ -24,7 +24,7 @@ Feedback - {{ applicant.get_full_name }}
       {{ applicant.gender }}
       {{ applicant.get_full_name }}
       {% if user|has_role:'staff' or user|can:'edit_applicants' %}
-        <a href="{% url 'feedback:edit_applicant' applicant.norm_name %}" class="btn btn-default btn-sm profile-show-btn"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>&nbsp;&nbsp;Edit</a>
+        <a href="{% url 'feedback:edit_applicant' event_name applicant.norm_name %}" class="btn btn-default btn-sm profile-show-btn"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>&nbsp;&nbsp;Edit</a>
       {% endif %}
     </h4>
   </div>
@@ -110,7 +110,7 @@ Feedback - {{ applicant.get_full_name }}
         </div>
         <br>
         <div class="col-md-12 text-center">
-          <a href="{% url 'feedback:index' %}" class="btn btn-default">BACK</a>
+          <a href="{% url 'feedback:index' event_name %}" class="btn btn-default">BACK</a>
           {% if state.current != 3 %}
             &nbsp;&nbsp;
             <input class="btn btn-default" type="submit" value="SAVE" />
@@ -138,8 +138,8 @@ Feedback - {{ applicant.get_full_name }}
               {% for f in feedback %}
                 {% if f.rating or f.interest or f.comments %}
                     <tr>
-                      <td><a href="{% url 'profile' f.scholar.norm_name %}">{{ f.scholar.first_name }}</a></td>
-                      <td><a href="{% url 'profile' f.scholar.norm_name %}">{{ f.scholar.last_name }}</a></td>
+                      <td><a href="{% url 'profile' event_name f.scholar.norm_name %}">{{ f.scholar.first_name }}</a></td>
+                      <td><a href="{% url 'profile' event_name f.scholar.norm_name %}">{{ f.scholar.last_name }}</a></td>
                       <td>{% if f.rating %}{{ f.rating }}{% endif %}</td>
                       <td>{% if f.interest %}{{ f.interest }}{% endif %}</td>
                       <td>{{ f.comments }}</td>
