--- a/feedback/templates/feedback/applicant_table.html
+++ b/feedback/templates/feedback/applicant_table.html
@@ -16,7 +16,7 @@ Feedback - Applicant Table
 
 {% block content %}
 <div class="col-md-12 text-center">
-{% feedback_header 'table' user %}
+  {% feedback_header 'table' user event_name %}
 </div>
 <div class="col-md-10 col-md-offset-1 well">
   <div class="table-responsive">
@@ -43,8 +43,8 @@ Feedback - Applicant Table
             <td>
               {{ applicant.gender }}
             </td>
-            <td><a href="{% url 'feedback:applicant_profile' applicant.norm_name %}">{{ applicant.first_name }}</a></td>
-            <td><a href="{% url 'feedback:applicant_profile' applicant.norm_name %}">{{ applicant.last_name }}</a></td>
+            <td><a href="{% url 'feedback:applicant_profile' event_name applicant.norm_name %}">{{ applicant.first_name }}</a></td>
+            <td><a href="{% url 'feedback:applicant_profile' event_name applicant.norm_name %}">{{ applicant.last_name }}</a></td>
             <td>{{ applicant.high_school }}</td>
             <td>{{ applicant.hometown }}</td>
             <td>{{ applicant.hometown_state }}</td>
