--- a/feedback/templates/feedback/applicant.html
+++ b/feedback/templates/feedback/applicant.html
@@ -9,7 +9,7 @@
 Feedback - {{ applicant.get_full_name }}
 {% endblock %}
 
-{% if user|has_role:'staff' %}
+{% if user|has_role:'staff' or user|has_role:'selection' %}
   {% block additional_include %}
   <link rel="stylesheet" href="https://cdn.datatables.net/1.10.10/css/dataTables.bootstrap.min.css">
   <script src="https://cdn.datatables.net/1.10.10/js/jquery.dataTables.min.js"></script>
@@ -23,7 +23,7 @@ Feedback - {{ applicant.get_full_name }}
     <h4 class="margin-bot-md">
       {{ applicant.gender }}
       {{ applicant.get_full_name }}
-      {% if user|has_role:'staff' or user|can:'edit_applicants' %}
+      {% if user|has_role:'staff' or user|has_role:'dev' %}
         <a href="{% url 'feedback:edit_applicant' applicant.norm_name %}" class="btn btn-default btn-sm profile-show-btn"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>&nbsp;&nbsp;Edit</a>
       {% endif %}
     </h4>
@@ -120,7 +120,7 @@ Feedback - {{ applicant.get_full_name }}
       </form>
     </div>
   </div>
-  {% if user|has_role:'staff' %}
+  {% if user|has_role:'staff' or user|has_role:'selection' %}
     <div class="col-md-12">
       <h4>Feedback</h4>
         <div class="table-responsive">
@@ -152,7 +152,7 @@ Feedback - {{ applicant.get_full_name }}
     </div>
   {% endif %}
 </div>
-{% if user|has_role:'staff' %}
+{% if user|has_role:'staff' or user|has_role:'selection' %}
   <script>
   $(document).ready(function(){
       $('#feedbackTable').DataTable({
