minor bug fixes for feedback system

--- a/feedback/templates/feedback/edit_state.html
+++ b/feedback/templates/feedback/edit_state.html
@@ -26,7 +26,7 @@ Feedback - Edit App State
      <div class="col-md-12 col-sm-12 text-center">
       <br>
       {% block links %}
-      <a href="{% url 'feedback:index' %}" class="btn btn-default">BACK</a>
+      <a href="{% url 'feedback:index_redirect' %}" class="btn btn-default">BACK</a>
       &nbsp;&nbsp;
       <input class="btn btn-default" type="submit" value="SAVE" />
       {% endblock %}
