--- a/core/static/css/styles.css
+++ b/core/static/css/styles.css
@@ -379,3 +379,91 @@ a p.card-extra-info {
 a p.card-extra-info:hover {
   color: #777;
 }
+
+.starred {
+  color: #F3D321;
+}
+
+.unstarred {
+  color: #E6E6E6;
+}
+
+a.starred:visited {
+  color: #F3D321;
+}
+
+a.starred:hover {
+  color: #E4C61D;
+}
+
+a.unstarred:visited {
+  color: #E6E6E6;
+}
+
+a.unstarred:hover {
+  color: #C1C1C1;
+}
+.modal {
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  overflow: hidden;
+}
+
+.modal-dialog {
+  position: fixed;
+  margin: 0;
+  width: 100%;
+  height: 100%;
+  padding: 0;
+}
+
+.modal-content {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  border: 2px solid #3c7dcf;
+  border-radius: 0;
+  box-shadow: none;
+}
+
+.modal-header {
+  position: absolute;
+  top: 0;
+  right: 0;
+  left: 0;
+  height: 50px;
+  padding: 10px;
+  background: #6598d9;
+  border: 0;
+}
+
+.modal-title {
+  font-weight: 300;
+  font-size: 2em;
+  color: #fff;
+  line-height: 30px;
+}
+
+.modal-body {
+  position: absolute;
+  top: 50px;
+  bottom: 60px;
+  width: 100%;
+  font-weight: 300;
+  overflow: auto;
+}
+
+.modal-footer {
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  height: 60px;
+  padding: 10px;
+  background: #f1f3f5;
+}
