--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -41,7 +41,8 @@
             {% if not user.is_authenticated %}
               <li><a href="{% url 'login' %}">Login</a></li>
             {% else %}
-              <li><a href="{% url 'mccalendar:index' %}">Calendar</a></li>
+              <li><a href="{% url 'feedback:index_redirect' %}">Feedback</a></li>
+              {# <li><a href="{% url 'mccalendar:index' %}">Calendar</a></li> #}
               {# <li><a href="{% url 'documents:index' %}">Documents</a></li> #}
               <li><a href="{% url 'scholars' %}">Directory</a></li>
 
