--- a/feedback/templates/feedback/applicant.html
+++ b/feedback/templates/feedback/applicant.html
@@ -23,6 +23,8 @@ Feedback - {{ applicant.get_full_name }}
     <h4 class="margin-bot-md">
       {{ applicant.gender }}
       {{ applicant.get_full_name }}
+
+      <a href="" id="favorite" class="{% if not favorited %}un{% endif %}starred"><span class="glyphicon glyphicon-star" aria-hidden="true"></span></a>
       {% if user|has_role:'staff' or user|has_role:'dev' %}
         <a href="{% url 'feedback:edit_applicant' event_name applicant.norm_name %}" class="btn btn-default btn-sm profile-show-btn"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>&nbsp;&nbsp;Edit</a>
       {% endif %}
@@ -38,7 +40,9 @@ Feedback - {{ applicant.get_full_name }}
           <img style="margin-bottom:5px;" src="{{ im.url }}" width="{{ im.width }}" height="{{ im.height }}">
         {% endthumbnail %}
         <br>
-        <br>
+        {% if applicant.group %}
+          <h6>Group {{ applicant.group }}</h6>
+        {% endif %}
         {% if applicant.high_school %}
           <h5>{{ applicant.high_school }}</h5>
         {% endif %}
@@ -169,6 +173,22 @@ Feedback - {{ applicant.get_full_name }}
     </div>
   {% endif %}
 </div>
+<script>
+$("#favorite").click(function(e) {
+  var fav_node = $(this);
+  $.post("{% url 'feedback:favorite_applicant' event_name applicant.norm_name %}", function( data ) {
+    if(data.msg == 'max stars given') {
+      alert('You can only have 3 favorites max.');
+    }
+    else {
+      fav_node.removeClass().addClass(data.msg);
+    }
+    console.log(data);
+  });
+  e.preventDefault();
+
+});
+</script>
 {% if user|has_role:'staff' or user|has_role:'selection' %}
   <script>
   $(document).ready(function(){
