--- a/feedback/templates/feedback/index.html
+++ b/feedback/templates/feedback/index.html
@@ -33,6 +33,23 @@ Feedback - Directory
       {% feedback_header 'directory' user event_name %}
       <br>
     {% endif %}
+    <div id="myModal" class="modal modal-fullscreen fade">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&close;</button>
+            <h4 class="modal-title">Modal title</h4>
+          </div>
+          <div class="modal-body">
+            <iframe src="fw2016/applicant/abbyplump" style="zoom:0.60" width="99.6%" height="250" frameborder="0"></iframe>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+            <button type="button" class="btn btn-primary">Save changes</button>
+          </div>
+        </div>
+      </div>
+    </div>
     <div class="row">
       <div class="col-md-4 col-md-offset-4">
         <input class="search form-control" placeholder="Search" />
@@ -92,7 +109,9 @@ Feedback - Directory
           </div>
           <!-- applicant quick info -->
           <div class="text-right">
-              <h4>{{ applicant.first_name }} <span class="last-name">{{ applicant.last_name }}</span></h4>
+              <h4>
+                {{ applicant.first_name }} <span class="last-name">{{ applicant.last_name }}</span>
+              </h4>
               <p class="card-extra-info">
                 {% if applicant.high_school %}
                   <span class="high-school">{{ applicant.high_school }}</span>
@@ -160,5 +179,26 @@ $('.female-filter').on('click', function() {
     return $(item.elm).find('.gender').text() == 'Ms.';
   });
 });
+
+$(".modal-transparent").on('show.bs.modal', function () {
+  setTimeout( function() {
+    $(".modal-backdrop").addClass("modal-backdrop-transparent");
+  }, 0);
+});
+$(".modal-transparent").on('hidden.bs.modal', function () {
+  $(".modal-backdrop").addClass("modal-backdrop-transparent");
+});
+
+$(".modal-fullscreen").on('show.bs.modal', function () {
+  setTimeout( function() {
+    $(".modal-backdrop").addClass("modal-backdrop-fullscreen");
+  }, 0);
+});
+$(".modal-fullscreen").on('hidden.bs.modal', function () {
+  $(".modal-backdrop").addClass("modal-backdrop-fullscreen");
+});
+// $('#myModal').modal({show:true})
+
+
 </script>
 {% endblock %}
